--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-firebase/firestore": "^17.4.1",
     "@react-native-firebase/storage": "^17.4.1",
     "@react-native-masked-view/masked-view": "^0.2.8",
+    "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "@rneui/base": "^4.0.0-rc.7",
@@ -24,6 +25,8 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-image-picker": "^5.3.1",
+    "react-native-paper": "^5.7.2",
+    "react-native-reanimated": "^3.1.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-vector-icons": "^9.2.0"
